--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: bb_app
     ports:
-      - "80:80"
+      - "${HTTPPORT}:80"
     volumes:
       - ./:/app
       - ./Caddyfile:/etc/caddy/Caddyfile
